--- a/src/components/PopUpFeedback/index.module.css
+++ b/src/components/PopUpFeedback/index.module.css
@@ -54,3 +54,8 @@
     color: #00AEEF;
     cursor: pointer;
 }
+@media only screen and (max-width: 800px) {
+    .Wrapper{
+        width: calc(100% - 30px);
+    }
+}
