--- a/src/components/PopUpFeedback/index.module.css
+++ b/src/components/PopUpFeedback/index.module.css
@@ -3,6 +3,7 @@
     width: 770px;
     height: 740px;
     background-color: #d9d9d9;
+    max-height: 70vh;
 }
 .Content{
     border: 3px solid #01437C;
