--- a/src/components/ui/Button/index.module.css
+++ b/src/components/ui/Button/index.module.css
@@ -14,3 +14,16 @@
 .Button:hover{
     background-color: #00ABCD;
 }
+@media only screen and (max-width: 1024px) {
+    .Button{
+        padding: 0;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+}
+@media only screen and (max-width: 480px) {
+    .Button{
+        font-size: 12px;
+    }
+}
